tests/error/misc_errors/wasm_bad_output_type.err
Error: WASM signature error (at $FILE:9:4)
  | 
7 | class Foo:
8 |     @wasm
9 |     def add(self: "Foo", x: int, y: int) -> bool: ...
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ WASM function signature contained an unsupported type:
  |                                                       `bool`

Guppy compilation failed due to 1 previous error
